[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/player_one.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/fight_scene/fight_scene.gd" type="Script" id=2]
[ext_resource path="res://Background/background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/PlayerTwo.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/win_lose_menu/win_lose_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/player_camera_controller.gd" type="Script" id=6]
[ext_resource path="res://imports/Goku-Black-PNG-Transparent-Image.png" type="Texture" id=7]
[ext_resource path="res://imports/asset art.png" type="Texture" id=8]
[ext_resource path="res://resources/runtime_data.tres" type="Resource" id=9]
[ext_resource path="res://scripts/music_player.gd" type="Script" id=10]
[ext_resource path="res://imports/DBZM-M1307.mp3" type="AudioStream" id=11]

[node name="Fight_Scene_Control" type="Spatial"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="FightSprites" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 6 )

[node name="WordArtAsset" type="Sprite" parent="FightSprites"]
position = Vector2( 640, 360 )
texture = ExtResource( 8 )

[node name="Viewport" type="Viewport" parent="FightSprites"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraStand" type="Spatial" parent="FightSprites/Viewport"]

[node name="CharacterCamera" type="Camera" parent="FightSprites/Viewport/CameraStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.27 )
cull_mask = 1047554
fov = 50.7
size = 10.0

[node name="Players" type="Sprite3D" parent="FightSprites/Viewport/CameraStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.302, 0, -10.1392 )
layers = 2
texture = ExtResource( 7 )

[node name="PlayerOne" parent="." instance=ExtResource( 1 )]

[node name="Enemy_Fighter" parent="." instance=ExtResource( 4 )]

[node name="WinLoseMenu" parent="." instance=ExtResource( 5 )]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -3.0
script = ExtResource( 10 )
runtime_data = ExtResource( 9 )
